# lightning-C-ECS

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
benchmarks/: StaticHasmap_benchmarks.h  benchmarks.cpp  hash_benchmarks.h  vec_benchmarks.h
benschmarks/: benchmarks.cpp
example/include/: component.h
example/src/: main.c
include/: staticHashmap.h  until.h  vec.h
include/ECS/: ECSType.h  register.h  table.h
include/Hash/: City.h  hashFunctions.h  xxhash.h
include/storage/: linkedList.h  staticHashmap.h
src/: hashFunctions.c  main.c  staticHashmap.c  until.h  vec.c  vec.h
src/ECS/: register.c  table.c
src/Hash/: City.c  hashFunctions.c  xxhash.c
src/storage/: linkedList.c  staticHashmap.c  vec.c
test/: linkedList_test.h  staticHashmap_test.h  test.cpp  vec_test.h
